refactor: rename second-page to menu-page and update related methods

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -2,8 +2,13 @@
   <div class="container_homePage">
     <img class="hello_icon" src="icons8-hello_100.png" alt="hello_icon" />
     <p class="welcone_text">
-      Сейчас вы на главной странице! Для перехода кликните на смайлик
-      <img routerLink="second" src="icons8-smile-48.png" alt="smile_icon" class="smile_icon_link" />
+      Сейчас вы на главной странице! Для перехода в меню со списком элементов кликните на смайлик
+      <img
+        routerLink="menupage"
+        src="icons8-smile-48.png"
+        alt="smile_icon"
+        class="smile_icon_link"
+      />
     </p>
   </div>
 </main>
