--- a/src/app/components/menu-page/menu-page.html
+++ b/src/app/components/menu-page/menu-page.html
@@ -1,8 +1,8 @@
 <header class="header">
   <h1>Выбранный раздел: {{ selectedType.title }}</h1>
   <div class="header_data_value">
-    <h1>Выбрано пунктов: {{ selectedCount() }}</h1>
-    <h1>Общее значение: {{ sumValues() }}</h1>
+    <h1>Выбрано пунктов: {{ getSelectedCount() }}</h1>
+    <h1>Общее значение: {{ getSelectedItemsSum() }}</h1>
   </div>
 </header>
 <main class="main_container">
@@ -27,7 +27,7 @@
             class="checkbox"
             type="checkbox"
             [checked]="item.selected"
-            (change)="activeCheckbox(item)"
+            (change)="onChangeCheckboxStatus(item)"
           />
           <div class="item_info">
             <li class="section_checkbox_label">{{ item.label }}</li>
